# MyFirstCmake

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  MyFirstCmake.ioc  README.md  openocd.cfg
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
cmake/: arm-none-eabi-gcc.cmake
docs/assets/_src/: ATTRIBUTION.md  render_diagrams.ps1
